--- a/components/LotteryFormComponent/FormComponent.module.scss
+++ b/components/LotteryFormComponent/FormComponent.module.scss
@@ -1,4 +1,5 @@
 @import '../../styles/scss/partials/breakpoints';
+@import '../../styles/scss/partials/_variables';
 
 .formSection{
     max-width: 1024px;
@@ -47,6 +48,10 @@
             color: #ffffff;
             border: none;
             border-radius: 2px;
+        }
+        
+        .errorText {
+            color: $defYellow;        
         }
     }
 
